# pishirase

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings.toml.template
src/: lib.rs  main.rs
tests/: pishirase.rs
tests/test_certs/: test.pub.pem.txt
