[package]
name = "pishirase"
version = "0.1.0"
authors = ["mishan88 <mishanhideaki88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
chrono = "0.4.10"
chrono-tz = "0.5.1"
itertools = "0.8.2"
config = "0.10.1"